@@ -487,6 +487,11 @@
                 <artifactId>xml-apis</artifactId>
                 <version>1.4.01</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.1.23</version>
+            </dependency>
             <!-- ======================================== -->
             <!-- Spring依赖 -->
             <!-- ======================================== -->
