@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+            xmlns:beans="http://www.springframework.org/schema/beans"
+            xmlns:springext="http://www.alibaba.com/schema/springext/base" elementFormDefault="qualified">
+
+    <xsd:import namespace="http://www.springframework.org/schema/beans"
+                schemaLocation="http://localhost:8080/schema/www.springframework.org/schema/beans/spring-beans.xsd" />
+
+    <xsd:import namespace="http://www.alibaba.com/schema/springext/base"
+                schemaLocation="http://localhost:8080/schema/www.alibaba.com/schema/springext/springext-base.xsd" />
+
+    <xsd:element name="renderResultAsJson" type="RenderResultAsJsonType">
+        <xsd:annotation>
+            <xsd:documentation><![CDATA[
+    将screen所返回的结果转换成json格式并输出。
+            ]]></xsd:documentation>
+        </xsd:annotation>
+    </xsd:element>
+
+    <xsd:complexType name="RenderResultAsJsonType">
+        <xsd:attribute name="resultName" type="xsd:string" default="screenResult" />
+        <xsd:attribute name="contentType" type="xsd:string" default="application/json" />
+        <xsd:attribute name="javascriptVariable" type="xsd:string" use="optional" />
+        <xsd:attribute name="javascriptContentType" type="xsd:string" default="application/javascript" />
+    </xsd:complexType>
+
+</xsd:schema>
